--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ html {
 body {
   overflow-x: hidden;
 }
-/* section {
+section {
   padding: 3.9rem 0;
   overflow: hidden;
 }
@@ -40,17 +40,12 @@ a {
 p {
   font-size: 1.6rem;
 }
-
-.container {
-  width: 100%;
-  max-width: 1225.5rem;
-  margin: 0 auto;
-  padding: 0 2.4rem;
-} */
-
-/* Header
-========================================== */
-/* header {
+/* Navigation
+================================ */
+nav {
+  font-size: 1.6rem;
+}
+header {
   width: 100%;
   position: absolute;
   top: 0;
@@ -58,141 +53,90 @@ p {
   z-index: 1;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), transparent);
 }
-
-.nav {
-  height: 7.2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.brand {
+  /* float: left; */
+  padding: 5px 0;
+  text-align: center;
+  width: 85%;
 }
-
-.menu-toggle {
-  color: #ffffff;
-  font-size: 2.2rem;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 2.5rem;
-  cursor: pointer;
-  z-index: 1500;
+.brand .navbar-brand {
+  transform: translateX(2rem);
+  /* float: none; */
 }
-.fa-times {
-  display: none;
+div .navbar-brand {
+  font-size: 2.5rem;
+  padding: 0px;
+  margin-left: 0.5rem;
+  border-bottom: 3px solid white;
 }
-
-.nav-list {
+li.active {
+  width: 20%;
+  padding: 0 5px;
+  border-bottom: 2px solid #ffffff;
+}
+li {
   list-style: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 80%;
-  height: 100vh;
-  background-color: var(--main-font-color-dark);
-  padding: 4.4rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  z-index: 1250;
-  transform: translateX(-100%);
-  transition: transform 0.5s;
+  margin: 1rem 1.4rem 1rem 0;
 }
-
-.nav::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 1000;
-  opacity: 0;
-  transform: scale(0);
-  transition: opacity 0.5s;
-}
-
-.open .fa-times {
-  display: block;
-}
-.open .fa-bars {
-  display: none;
-}
-.open .nav-list {
-  transform: translateX(0);
-}
-.open .nav::before {
-  opacity: 1;
-  transform: scale(1);
-}
-
-.nav-link {
-  display: block;
+.navbar-dark .navbar-nav .nav-link {
   color: #ffffff;
   text-transform: uppercase;
-  font-size: 1.6rem;
-  letter-spacing: 2px;
-  margin-right: -2px;
-  transition: color.5s;
+  font-size: 1.4rem;
 }
-.nav-link:hover {
-  color: var(--secondary-font-color);
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
-/* Hero
-======================================================= */
-/*
+.custom-toggler.navbar-toggler {
+  border-color: rgba(255, 255, 255, 0.6);
+}
+.navbar-bg-custom {
+  background: #0c0c13;
+}
+/* Jumbotron 
+=====================*/
 .hero {
   width: 100%;
   height: 100vh;
   background: url("images/hero.jpg") center no-repeat;
   background-size: cover;
-  display: flex;
-  align-items: center;
-  text-align: center;
 }
-
 .sub-headline {
-  font-size: 8.5rem;
+  font-size: 11.5rem;
   font-family: var(--secondary-font);
   color: var(--secondary-font-color);
   font-weight: 100;
   line-height: 0.4;
+  text-align: center;
   letter-spacing: 2px;
-  opacity: 0;
-  animation: fadeUp 0.5s forwards 0.5s;
 }
-
 .first-letter {
   text-transform: uppercase;
   font-size: 10.3rem;
 }
-
 .headline {
   color: #ffffff;
-  font-size: 3.7rem;
+  font-size: 5.7rem;
   font-family: var(--main-font);
   text-transform: uppercase;
   font-weight: 900;
   letter-spacing: 0.5rem;
   margin-right: -0.5rem;
-  animation: scale 0.5s forwards;
+  text-align: center;
 }
-
 .separator {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .line {
   width: 100%;
   max-width: 8.4rem;
   height: 0.25rem;
   background-color: #ffffff;
   position: relative;
-  opacity: 0;
-  animation: grow 2s forwards 0.9s;
 }
-
 .line-right::before,
 .line-left::before {
   content: "";
@@ -200,8 +144,6 @@ p {
   top: 50%;
   transform: translateY(-50%);
   border: 0.6rem solid transparent;
-  opacity: 0;
-  animation: grow 0.5s forwards 1.2s;
 }
 .line-right::before {
   border-right-color: #fff;
@@ -215,13 +157,6 @@ p {
   font-size: 1.2rem;
   color: var(--secondary-font-color);
   margin: 0 1.6rem;
-  opacity: 0;
-  animation: spin 0.5s forwards 0.7s;
-}
-
-.single-animation {
-  opacity: 0;
-  animation: fadeDown 0.5s forwards 1.5s;
 }
 .headline-description h5 {
   color: #ffffff;
@@ -231,8 +166,9 @@ p {
   margin-bottom: 1.2rem;
   letter-spacing: 3px;
   margin-right: -3px;
+  text-align: center;
 }
-.btn {
+button {
   display: inline-block;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -242,338 +178,212 @@ p {
   font-size: 1.1rem;
   background-color: #ffffff;
   padding: 0.9rem 1.8rem;
-  color: var(--body-font-color);
   border-radius: 0.4rem;
   transition: background-color 0.5s;
 }
-
+.cta-btn a {
+  color: var(--body-font-color);
+  text-decoration: none;
+}
 .cta-btn:hover,
 .cta-btn:focus {
   color: #ffffff;
   background: var(--secondary-font-color);
-} */
-
-/* Discovery
-======================================================= */
-/* .global-headline {
-  text-align: center;
-  margin-top: 3.9rem;
 }
-.discover-our-story .global-headline {
-  margin-top: 6.9rem;
+
+/* Our Story
+============================ */
+.headline-dark {
+  color: var(--main-font-color-dark);
+  font-size: 3rem;
+  font-family: var(--main-font);
+  text-transform: uppercase;
+  font-weight: 900;
+  letter-spacing: 0.5rem;
+  margin-right: -0.5rem;
+  text-align: center;
+}
+.global-headline .sub-headline {
+  line-height: 0.52;
 }
 .global-headline .asterisk {
   color: var(--body-font-color);
-  margin: 2.4rem 0;
 }
-.headline-dark {
-  color: var(--main-font-color-dark);
-  letter-spacing: 0.7rem;
-  margin-right: -0.7rem;
+
+button {
+  display: inline-block;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-right: -2px;
+  position: relative;
 }
-.global-headline .sub-headline {
-  letter-spacing: -1px;
-  line-height: 0.42;
-}
-.restaurant-info {
-  text-align: center;
-}
-.restaurant-description {
-  margin-bottom: 3rem;
-}
-.restaurant-description p {
-  line-height: 1.6;
-  margin-bottom: 2.4rem;
-}
-.body-btn {
+.cta {
   font-size: 1.5rem;
   color: var(--secondary-font-color);
   position: relative;
   transition: color 0.3s;
+  padding: 0.7rem 0.8rem;
 }
-.body-btn::before {
+.cta::before {
   content: "";
   position: absolute;
   left: 0;
-  bottom: -3px;
+  bottom: 0;
   width: 100%;
   height: 2px;
   background-color: var(--secondary-font-color);
   transition: background-color 0.5s;
 }
-
-.body-btn:hover,
-.body-btn:focus {
+.cta:hover,
+.cta:focus {
   color: var(--main-font-color-dark);
 }
-.body-btn:hover::before,
-.body-btn:focus::before {
+.cta:hover::before,
+.cta:focus::before {
   background-color: var(--main-font-color-dark);
 }
 
-/* Tasteful
-================================= */
-/* .tasteful-recipes {
-  background: url("images/tasteful-recipes.jpg") center no-repeat;
+/* Tasteful Recipes
+=============================*/
+.tasteful-recipes {
+  background: url("./images/tasteful-recipes.jpg") no-repeat;
   background-size: cover;
+  background-position: center center;
 }
-.between {
-  min-height: 65vh;
-  display: flex;
-  align-items: center;
-} */
 
 /* Discover our menu
 =================================== */
-/* .image-group {
+.gallery {
+  padding: 5rem;
+  overflow: hidden;
+}
+.image-group {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 1.5rem;
+  margin: 1rem 0;
 }
-.discover-our-menu .restaurant-description {
-  padding-top: 3rem;
-  margin-bottom: 0;
-} */
-/* The perfect blend
-===================================== */
-/* .perfect-blend {
-  background: url("images/perfect-blend.jpg") center no-repeat;
-  background-size: cover;
-} */
-
-/* Footer
-===================================== */
-/*footer {
-  padding: 7.9rem 0;
-  background-color: #121212;
-  color: #ffffff;
-  text-align: center;
-  position: relative;
+.restaurant-description {
+  padding: 1rem;
 }
-.back-to-top {
-  width: 7rem;
-  height: 7rem;
-  background-color: #121212;
-  position: absolute;
-  top: -3rem;
-  left: 50%;
-  transform: translateX(-50%);
-  border-radius: 50%;
-}
-
-.back-to-top i {
-  display: block;
-  color: #ffffff;
-  font-size: 2rem;
+.restaurant-description p {
+  line-height: 2;
   padding: 2rem;
-  animation: up 2s infinite;
 }
-.footer-content {
-  overflow: hidden;
+
+/* Perfect blend */
+.perfect-blend {
+  background: url("./images/perfect-blend.jpg") no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+/* Culinary Delight
+=============================*/
+.image-group.img-v2 {
+  padding: 2rem 4rem;
+}
+
+/* RESPONSIVENESS 
+=============================*/
+footer {
+  background: #000;
+  color: #ffffff;
+  padding-bottom: 1rem;
 }
 .footer-content h4 {
   font-size: 1.9rem;
   text-transform: uppercase;
   font-weight: 100;
   letter-spacing: 3px;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
+  overflow: hidden;
 }
-.footer-content .asterisk {
-  margin: 2.4rem 0;
-}
-.footer-content-about {
-  margin-bottom: 5.4rem;
-}
-.footer-content-about p {
+.footer-content p {
+  max-width: 50ch;
+  margin: 0 auto;
+  padding: 2rem 0;
+  font-size: 1.6rem;
+  overflow: hidden;
   line-height: 2;
 }
-.social-icons {
-  list-style: none;
-  margin-bottom: 5.4rem;
-  display: flex;
-  justify-content: center;
-}
-.social-icons i {
+.back-to-top {
+  width: 60px;
+  height: 60px;
   font-size: 2rem;
-  color: #ffffff;
-  padding: 0.8rem 0.2rem;
-  opacity: 0.5;
-  transition: color 0.5s;
+  margin: 0 auto;
+  border-radius: 50%;
+  background: #000;
+  transform: translateY(-30px);
+  padding: 10px 20px;
 }
-.social-icons i:hover,
-.social-icons i:focus {
+.back-to-top a {
+  color: #ffffff;
+}
+.social-icons li {
+  font-size: 2rem;
+  padding: 0;
+  margin: 0;
+}
+.social-icons li a {
   color: var(--secondary-font-color);
 }
-.newsletter-form {
-  width: 100%;
-  position: relative;
-  display: flex;
-  justify-content: center;
+/* .newsletter-input {
+  max-width: 5rem;
+  padding: 0.6rem 7rem 0.6rem 0.6rem;
+} */
+/* button.newsletter-btn {
+  transform: translateX(-110%);
 }
-.newsletter-input {
-  width: 100%;
-  max-width: 25rem;
-  padding: 1rem;
-  border-radius: 0.4rem;
-}
-.newsletter-btn {
-  background: transparent;
-  border: none;
-  color: var(--main-font-color-dark);
-  cursor: pointer;
+button .fa-envelope {
   font-size: 1.6rem;
-  padding: 1px 0.6rem;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  margin-left: 19.5rem;
+  border: none;
 } */
-/* @media only screen and (min-width: 900px) {
-  section {
-    padding: 7.9rem;
+.input-group-append {
+  position: relative;
+  right: 9px;
+  top: -5px;
+}
+.input-group-text {
+  font-size: 1.7rem;
+  background: #ffffff;
+  border: none;
+}
+/* RESPONSIVENESS 
+=============================*/
+@media screen and (min-width: 400px) {
+  /* Navigation
+============================ */
+  .brand .navbar-brand {
+    transform: translateX(5rem);
   }
-  .menu-toggle {
-    display: none;
+  .image-group.img-v2 {
+    padding: 2.5rem 4rem;
   }
-  .nav {
-    justify-content: space-between;
-  }
-  .nav-list {
-    position: initial;
-    width: initial;
-    height: initial;
-    background-color: transparent;
-    padding: 0;
-    justify-content: initial;
-    flex-direction: row;
-    transform: initial;
-    transition: initial;
-  }
-  .nav-item {
-    margin: 0 2.4rem;
-    border: none;
-  }
-  .nav-link {
-    font-size: 1.3rem;
-  }
-  .active {
-    position: relative;
-  }
-  .active::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background-color: #ffffff;
-    left: 0;
-    bottom: -3px;
-  }
-  .sub-headline {
-    font-size: 10rem;
-  }
-  .first-letter {
-    font-size: 12.2rem;
-  }
-  .headline {
-    font-size: 4.7rem;
-    letter-spacing: 0.8rem;
-  }
-  .line {
-    max-width: 11.4em;
-  }
-  .restaurant-info {
-    display: flex;
-    align-items: center;
-  }
-  .restaurant-info > div {
-    flex: 1;
-  }
-  .padding-right {
-    padding-right: 7rem;
-  }
-  .footer-content {
-    max-width: 77.5rem;
-    margin: auto;
-  }
-  .footer-content-about {
-    max-width: 51rem;
-    margin: 0 auto 5.4rem;
-  }
-  .footer-content-divider {
-    display: flex;
-    justify-content: space-between;
-  }
-  .social-media,
-  .newsletter-form {
-    width: 100%;
-    max-width: 27.3rem;
-    margin: 0px 1rem;
-  }
-  .social-icons i {
-    opacity: 1;
-  }
-  .newsletter-btn {
-    margin-left: 12.5rem;
-  }
-} */
+}
 
-/* Animations
-================================= */
-
-/* @keyframes fadeUp {
-  0% {
-    transform: translateY(4rem);
+@media screen and (min-width: 991px) {
+  /* Navigation
+============================ */
+  .brand {
+    text-align: left;
   }
-  100% {
-    opacity: 1;
-    transform: translateY(0rem);
+  li {
+    margin: 1rem 6.4rem 1rem 0;
   }
-}
-@keyframes scale {
-  0% {
-    transform: scale(2);
+  /* Our Story
+============================ */
+  .restaurant-description {
+    padding: 3rem;
   }
-  100% {
-    opacity: 1;
-    transform: scale(1);
+  .restaurant-description {
+    padding: 5rem;
   }
-}
-@keyframes grow {
-  0% {
-    width: 0;
+  .image-group.img-v2 {
+    padding: 4rem 7rem;
   }
-  100% {
-    opacity: 1;
-    width: 100%;
+  footer {
+    background: #000;
+    color: #ffffff;
+    height: 65vh;
   }
 }
-@keyframes spin {
-  0% {
-    transform: rotate(0);
-  }
-  100% {
-    opacity: 1;
-    transform: rotate(-360deg);
-  }
-}
-@keyframes fadeDown {
-  0% {
-    transform: translateY(-1rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0rem);
-  }
-}
-@keyframes up {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    transform: translateY(-1rem);
-  }
-} */
