--- a/src/styles.css
+++ b/src/styles.css
@@ -8,17 +8,19 @@
   box-sizing: border-box;
 }
 
-$main-font: "Source Sans Pro", sans-serif;
-$secondary-font: "Herr Von Muellerhoff", cursive;
-$body-font: "Cabin", sans-serif;
-$main-font-color-dark: #252525;
-$secondary-font-color: #c59d5f;
-$body-font-color: #515151;
+:root {
+  --main-font: "Source Sans Pro", sans-serif;
+  --secondary-font: "Herr Von Muellerhoff", cursive;
+  --body-font: "Cabin", sans-serif;
+  --main-font-color-dark: #252525;
+  --secondary-font-color: #c59d5f;
+  --body-font-color: #515151;
+}
 
 html {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 10px;
-  color: $body-font-color;
+  color: var(--body-font-color);
   scroll-behavior: smooth;
 }
 body {
@@ -56,54 +58,53 @@ header {
   padding: 5px 0;
   text-align: center;
   width: 85%;
-  .navbar-brand {
-    transform: translateX(2rem);
-    /* float: none; */
-    font-size: 2.5rem;
-    padding: 0px;
-    margin-left: 0.5rem;
-    border-bottom: 3px solid white;
-  }
 }
-
+.brand .navbar-brand {
+  transform: translateX(2rem);
+  /* float: none; */
+}
+div .navbar-brand {
+  font-size: 2.5rem;
+  padding: 0px;
+  margin-left: 0.5rem;
+  border-bottom: 3px solid white;
+}
+li.active {
+  width: 20%;
+  padding: 0 5px;
+  border-bottom: 2px solid #ffffff;
+}
 li {
   list-style: none;
   margin: 1rem 1.4rem 1rem 0;
-  &.active {
-    width: 20%;
-    padding: 0 5px;
-    border-bottom: 2px solid #ffffff;
-  }
 }
 .navbar-dark .navbar-nav .nav-link {
   color: #ffffff;
   text-transform: uppercase;
   font-size: 1.4rem;
 }
-.custom-toggler {
-  .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-  }
-  &.navbar-toggler {
-    border-color: rgba(255, 255, 255, 0.6);
-  }
-  .navbar-bg-custom {
-    background: #0c0c13;
-  }
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
+.custom-toggler.navbar-toggler {
+  border-color: rgba(255, 255, 255, 0.6);
+}
+.navbar-bg-custom {
+  background: #0c0c13;
+}
 /* Jumbotron 
 =====================*/
 .hero {
-  width: 100%;
+  /* width: 100%;
   height: 100vh;
-  background: url("/images/hero.jpg") center no-repeat;
-  background-size: cover;
+  background: url("images/hero.jpg") center no-repeat;
+  background-size: cover; */
 }
 .sub-headline {
   font-size: 11.5rem;
-  font-family: $secondary-font;
-  color: $secondary-font-color;
+  font-family: var(--secondary-font);
+  color: var(--secondary-font-color);
   font-weight: 100;
   line-height: 0.4;
   text-align: center;
@@ -116,7 +117,7 @@ li {
 .headline {
   color: #ffffff;
   font-size: 5.7rem;
-  font-family: $main-font;
+  font-family: var(--main-font);
   text-transform: uppercase;
   font-weight: 900;
   letter-spacing: 0.5rem;
@@ -135,26 +136,26 @@ li {
   height: 0.25rem;
   background-color: #ffffff;
   position: relative;
-  &.line-right::before,
-  &.line-left::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    border: 0.6rem solid transparent;
-  }
-  &.line-right::before {
-    border-right-color: #fff;
-    right: 0;
-  }
-  &.line-left::before {
-    border-left-color: #fff;
-    left: 0;
-  }
+}
+.line-right::before,
+.line-left::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border: 0.6rem solid transparent;
+}
+.line-right::before {
+  border-right-color: #fff;
+  right: 0;
+}
+.line-left::before {
+  border-left-color: #fff;
+  left: 0;
 }
 .asterisk {
   font-size: 1.2rem;
-  color: $secondary-font-color;
+  color: var(--secondary-font-color);
   margin: 0 1.6rem;
 }
 .headline-description h5 {
@@ -179,36 +180,34 @@ button {
   padding: 0.9rem 1.8rem;
   border-radius: 0.4rem;
   transition: background-color 0.5s;
-  a {
-    color: $body-font-color;
-    text-decoration: none;
-  }
-  &:hover,
-  &:focus {
-    color: #ffffff;
-    background: $secondary-font-color;
-  }
+}
+.cta-btn a {
+  color: var(--body-font-color);
+  text-decoration: none;
+}
+.cta-btn:hover,
+.cta-btn:focus {
+  color: #ffffff;
+  background: var(--secondary-font-color);
 }
 
 /* Our Story
 ============================ */
 .headline-dark {
-  color: $main-font-color-dark;
+  color: var(--main-font-color-dark);
   font-size: 3rem;
-  font-family: $main-font;
+  font-family: var(--main-font);
   text-transform: uppercase;
   font-weight: 900;
   letter-spacing: 0.5rem;
   margin-right: -0.5rem;
   text-align: center;
 }
-.global-headline {
-  .sub-headline {
-    line-height: 0.52;
-  }
-  .asterisk {
-    color: $body-font-color;
-  }
+.global-headline .sub-headline {
+  line-height: 0.52;
+}
+.global-headline .asterisk {
+  color: var(--body-font-color);
 }
 
 button {
@@ -217,39 +216,39 @@ button {
   letter-spacing: 2px;
   margin-right: -2px;
   position: relative;
-  &.cta {
-    font-size: 1.5rem;
-    color: $secondary-font-color;
-    position: relative;
-    transition: color 0.3s;
-    padding: 0.7rem 0.8rem;
-    &::before {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      height: 2px;
-      background-color: $secondary-font-color;
-      transition: background-color 0.5s;
-    }
-    &:hover,
-    &:focus {
-      color: $main-font-color-dark;
-    }
-    &:hover::before,
-    &:focus::before {
-      background-color: $main-font-color-dark;
-    }
-  }
+}
+.cta {
+  font-size: 1.5rem;
+  color: var(--secondary-font-color);
+  position: relative;
+  transition: color 0.3s;
+  padding: 0.7rem 0.8rem;
+}
+.cta::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--secondary-font-color);
+  transition: background-color 0.5s;
+}
+.cta:hover,
+.cta:focus {
+  color: var(--main-font-color-dark);
+}
+.cta:hover::before,
+.cta:focus::before {
+  background-color: var(--main-font-color-dark);
 }
 
 /* Tasteful Recipes
 =============================*/
 .tasteful-recipes {
-  background: url("/images/tasteful-recipes.jpg") no-repeat;
+  /* background: url("./images/tasteful-recipes.jpg") no-repeat;
   background-size: cover;
-  background-position: center center;
+  background-position: center center; */
 }
 
 /* Discover our menu
@@ -266,17 +265,17 @@ button {
 }
 .restaurant-description {
   padding: 1rem;
-  p {
-    line-height: 2;
-    padding: 2rem;
-  }
+}
+.restaurant-description p {
+  line-height: 2;
+  padding: 2rem;
 }
 
 /* Perfect blend */
 .perfect-blend {
-  background: url("/images/perfect-blend.jpg") no-repeat;
+  /* background: url("./images/perfect-blend.jpg") no-repeat;
   background-size: cover;
-  background-position: center center;
+  background-position: center center; */
 }
 /* Culinary Delight
 =============================*/
@@ -284,60 +283,61 @@ button {
   padding: 2rem 4rem;
 }
 
-/* RESPONSIVENESS 
+/* FOOTER
 =============================*/
 footer {
   background: #000;
   color: #ffffff;
   padding-bottom: 1rem;
-  .footer-content {
-    h4 {
-      font-size: 1.9rem;
-      text-transform: uppercase;
-      font-weight: 100;
-      letter-spacing: 3px;
-      margin-bottom: 2rem;
-      overflow: hidden;
-    }
-    p {
-      max-width: 50ch;
-      margin: 0 auto;
-      padding: 2rem 0;
-      font-size: 1.6rem;
-      overflow: hidden;
-      line-height: 2;
-    }
-  }
-  .back-to-top {
-    width: 60px;
-    height: 60px;
-    font-size: 2rem;
-    margin: 0 auto;
-    border-radius: 50%;
-    background: #000;
-    transform: translateY(-30px);
-    padding: 10px 20px;
-    a {
-      color: #ffffff;
-    }
-  }
-  .social-icons li {
-    font-size: 2rem;
-    padding: 0;
-    margin: 0;
-    a {
-      color: $secondary-font-color;
-    }
-  }
-  .input-group-append {
-    button {
-      background: #ffffff;
-      font-size: 1.4rem;
-      padding: 1px;
-    }
-  }
+}
+.footer-content h4 {
+  font-size: 1.9rem;
+  text-transform: uppercase;
+  font-weight: 100;
+  letter-spacing: 3px;
+  margin-bottom: 2rem;
+  overflow: hidden;
+}
+.footer-content p {
+  max-width: 50ch;
+  margin: 0 auto;
+  padding: 2rem 0;
+  font-size: 1.6rem;
+  overflow: hidden;
+  line-height: 2;
+}
+.back-to-top {
+  width: 60px;
+  height: 60px;
+  font-size: 2rem;
+  margin: 0 auto;
+  border-radius: 50%;
+  background: #000;
+  transform: translateY(-30px);
+  padding: 10px 20px;
+}
+.back-to-top a {
+  color: #ffffff;
+}
+.social-icons li {
+  font-size: 2rem;
+  padding: 0;
+  margin: 0;
+}
+.social-icons li a {
+  color: var(--secondary-font-color);
 }
 
+.input-group-append {
+  position: relative;
+  right: 9px;
+  top: -5px;
+}
+.input-group-text {
+  font-size: 1.7rem;
+  background: #ffffff;
+  border: none;
+}
 /* RESPONSIVENESS 
 =============================*/
 @media screen and (min-width: 400px) {
