--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Cabin|Herr+Von+Muellerhoff|Source+Sans+Pro:400,900&display=swap");
-@import "node_modules/bootstrap/scss/bootstrap";
+// @import "node_modules/bootstrap/scss/bootstrap";
 /*Global styles*/
 *,
 *::before,
@@ -100,10 +100,10 @@ li {
   background-size: cover;
 }
 .sub-headline {
-  font-size: 11.5rem;
+  font-size: 9.5rem;
   font-family: $secondary-font;
   color: $secondary-font-color;
-  font-weight: 100;
+  font-weight: bold;
   line-height: 0.4;
   text-align: center;
   letter-spacing: 2px;
@@ -114,7 +114,7 @@ li {
 }
 .headline {
   color: #ffffff;
-  font-size: 5.7rem;
+  font-size: 3.7rem;
   font-family: $main-font;
   text-transform: uppercase;
   font-weight: 900;
@@ -327,10 +327,13 @@ footer {
       color: $secondary-font-color;
     }
   }
+  .input-group {
+    padding: 25px;
+  }
   .input-group-append {
     button {
       background: #ffffff;
-      font-size: 1.4rem;
+      font-size: 1rem;
       padding: 1px;
     }
   }
