--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -98,7 +98,7 @@ li.active {
 .hero {
   width: 100%;
   height: 100vh;
-  background: url("../images/hero.jpg") center no-repeat;
+  background: url("../images/hero-extra_small.jpg") center no-repeat;
   background-size: cover;
 }
 
@@ -256,7 +256,7 @@ button.cta:focus::before {
 /* Tasteful Recipes
 =============================*/
 .tasteful-recipes {
-  background: url("../images/tasteful-recipes.jpg") no-repeat;
+  background: url("../images/tasteful-recipes-extra_small.jpg") no-repeat;
   background-size: cover;
   background-position: center center;
 }
@@ -285,7 +285,7 @@ button.cta:focus::before {
 
 /* Perfect blend */
 .perfect-blend {
-  background: url("../images/perfect-blend.jpg") no-repeat;
+  background: url("../images/perfect-blend-extra_small.jpg") no-repeat;
   background-size: cover;
   background-position: center center;
 }
@@ -349,6 +349,15 @@ footer .input-group-append button {
 /* RESPONSIVENESS 
 =============================*/
 @media screen and (min-width: 400px) {
+  .hero {
+    background: url("../images/hero-medium.jpg") center no-repeat;
+  }
+  .tasteful-recipes {
+    background: url("../images/tasteful-recipes-medium.jpg") no-repeat;
+  }
+  .perfect-blend {
+    background: url("../images/perfect-blend-medium.jpg") no-repeat;
+  }
   /* Navigation
 ============================ */
   .brand .navbar-brand {
@@ -363,6 +372,15 @@ footer .input-group-append button {
 }
 
 @media screen and (min-width: 991px) {
+  .hero {
+    background: url("../images/hero-large.jpg") center no-repeat;
+  }
+  .tasteful-recipes {
+    background: url("../images/tasteful-recipes-large.jpg") no-repeat;
+  }
+  .perfect-blend {
+    background: url("../images/perfect-blend-large.jpg") no-repeat;
+  }
   /* Navigation
 ============================ */
   .brand {
