--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -98,6 +98,14 @@ li {
   height: 100vh;
   background: url("../images/hero.jpg") center no-repeat;
   background-size: cover;
+  .first-animation {
+    opacity: 0;
+    animation: fadeDown 1s forwards 0.9s;
+  }
+  .single-animation {
+    opacity: 0;
+    animation: fadeUp 1s forwards 0.9s;
+  }
 }
 .sub-headline {
   font-size: 9.5rem;
@@ -126,6 +134,8 @@ li {
   display: flex;
   align-items: center;
   justify-content: center;
+  opacity: 0;
+  animation: scale 2s forwards 0.9s;
 }
 .line {
   width: 100%;
@@ -154,6 +164,8 @@ li {
   font-size: 1.2rem;
   color: $secondary-font-color;
   margin: 0 1.6rem;
+  opacity: 0;
+  animation: spin 2s forwards 0.9s;
 }
 .headline-description h5 {
   color: #ffffff;
@@ -289,7 +301,7 @@ footer {
   color: #ffffff;
   padding-bottom: 1rem;
   .footer-content {
-    h4 {
+    h2 {
       font-size: 1.9rem;
       text-transform: uppercase;
       font-weight: 100;
@@ -318,23 +330,25 @@ footer {
     a {
       color: #ffffff;
     }
+    i {
+      animation: up 2s infinite;
+    }
   }
   .social-icons li {
     font-size: 2rem;
     padding: 0;
     margin: 0;
+    z-index: 5;
     a {
       color: $secondary-font-color;
     }
   }
   .input-group {
-    padding: 25px;
-  }
-  .input-group-append {
-    button {
-      background: #ffffff;
-      font-size: 1rem;
-      padding: 1px;
+    .input-group-append {
+      button.btn.btn-outline-secondary {
+        background: #ffffff;
+        color: #000;
+      }
     }
   }
 }
@@ -375,5 +389,68 @@ footer {
     background: #000;
     color: #ffffff;
     height: 65vh;
+  }
+}
+
+/* Animation
+============================ */
+@keyframes up {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-1rem);
+  }
+}
+
+@keyframes fadeDown {
+  0% {
+    transform: translateY(-1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0rem);
+  }
+}
+
+@keyframes fadeUp {
+  0% {
+    transform: translateY(4rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0rem);
+  }
+}
+
+@keyframes scale {
+  0% {
+    transform: scale(1.6);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+// @keyframes grow {
+//   0% {
+//     width: 0;
+//   }
+//   100% {
+//     opacity: 1;
+//     width: 100%;
+//   }
+// }
+@keyframes spin {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    opacity: 1;
+    transform: rotate(-360deg);
   }
 }
