--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -96,7 +96,7 @@ li {
 .hero {
   width: 100%;
   height: 100vh;
-  background: url("../images/hero.jpg") center no-repeat;
+  background: url("../images/hero-medium.jpg") center no-repeat;
   background-size: cover;
   .first-animation {
     opacity: 0;
@@ -256,7 +256,7 @@ button {
 /* Tasteful Recipes
 =============================*/
 .tasteful-recipes {
-  background: url("../images/tasteful-recipes.jpg") no-repeat;
+  background: url("../images/tasteful-recipes-medium.jpg") no-repeat;
   background-size: cover;
   background-position: center center;
 }
@@ -283,7 +283,7 @@ button {
 
 /* Perfect blend */
 .perfect-blend {
-  background: url("../images/perfect-blend.jpg") no-repeat;
+  background: url("../images/perfect-blend-medium.jpg") no-repeat;
   background-size: cover;
   background-position: center center;
 }
@@ -356,6 +356,23 @@ footer {
 /* RESPONSIVENESS 
 =============================*/
 @media screen and (min-width: 400px) {
+  .hero {
+    background: url("../images/hero-medium.jpg") center no-repeat;
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+  }
+  .tasteful-recipes {
+    background: url("../images/tasteful-recipes-medium.jpg") no-repeat;
+    background-size: cover;
+    background-position: center center;
+  }
+  /* Perfect blend */
+  .perfect-blend {
+    background: url("../images/perfect-blend-medium.jpg") no-repeat;
+    background-size: cover;
+    background-position: center center;
+  }
   /* Navigation
 ============================ */
   .brand .navbar-brand {
@@ -369,6 +386,23 @@ footer {
   }
 }
 @media screen and (min-width: 991px) {
+  .hero {
+    background: url("../images/hero.jpg") center no-repeat;
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+  }
+  .tasteful-recipes {
+    background: url("../images/tasteful-recipes.jpg") no-repeat;
+    background-size: cover;
+    background-position: center center;
+  }
+  /* Perfect blend */
+  .perfect-blend {
+    background: url("../images/perfect-blend.jpg") no-repeat;
+    background-size: cover;
+    background-position: center center;
+  }
   /* Navigation
 ============================ */
   .brand {
